maybe fix for mobile footer extra space

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,6 +2,18 @@ body {
     height: 100%;
 }
 
+@media (max-width: 1024px) {
+
+    body,
+    html {
+        /* height: 100%!important; */
+        overflow: auto !important;
+        max-height: 100% !important;
+    }
+}
+
+
+
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
